# ChangeLog for x11-misc/xbindkeys
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xbindkeys/ChangeLog,v 1.46 2007/02/09 16:31:59 nelchael Exp $

*xbindkeys-1.8.0 (09 Feb 2007)

  09 Feb 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +xbindkeys-1.8.0.ebuild:
  Version bump, bug #166036.

  10 Jan 2007; Piotr Jaroszyński <peper@gentoo.org> Manifest:
  Fix Manifest.

  10 Jan 2007; <marijn@gentoo.org> xbindkeys-1.7.3.ebuild:
  Dependency update: dev-util/guile -> dev-scheme/guile.

  14 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  -xbindkeys-1.7.2-r1.ebuild:
  Remove old version.

  19 Sep 2006; Doug Goldstein <cardoe@gentoo.org> xbindkeys-1.7.2-r1.ebuild,
  xbindkeys-1.7.3.ebuild:
  tcltk -> tk USE flag change as per bug #17808

  08 Sep 2006; Daniel Gryniewicz <dang@gentoo.org> xbindkeys-1.7.3.ebuild:
  Marked stable on amd64 for bug #145368

  03 Sep 2006; Markus Rothe <corsair@gentoo.org> xbindkeys-1.7.3.ebuild:
  Stable on ppc64; bug #145368

  30 Aug 2006; Michael Hanselmann <hansmi@gentoo.org>
  xbindkeys-1.7.3.ebuild:
  Stable on ppc.

  30 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  xbindkeys-1.7.3.ebuild:
  Stable on sparc

  30 Aug 2006; Joshua Jackson <tsunam@gentoo.org> xbindkeys-1.7.3.ebuild:
  Stable x86; bug #145368

*xbindkeys-1.7.3 (29 Jul 2006)

  29 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +xbindkeys-1.7.3.ebuild:
  Version bump, see bug #141922.

  13 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  -xbindkeys-1.7.2.ebuild:
  Remove old version.

  11 Jun 2006; Simon Stelling <blubb@gentoo.org> xbindkeys-1.7.2-r1.ebuild:
  stable on amd64

  07 Jun 2006; Markus Rothe <corsair@gentoo.org> xbindkeys-1.7.2-r1.ebuild:
  Stable on ppc64; bug #135822

  07 Jun 2006; Jason Wever <weeve@gentoo.org> xbindkeys-1.7.2-r1.ebuild:
  Stable on SPARC wrt bug #135822.

  06 Jun 2006; Emanuele Giaquinta <exg@gentoo.org>
  xbindkeys-1.7.2-r1.ebuild:
  Stable on ppc; bug #135822
