@@ -1,12 +1,12 @@
 DIST xbindkeys-1.8.0.tar.gz 129930 RMD160 09ff8520b2b8865ae2cd7218b9acf2a87ed29286 SHA1 155a5c3479b192f875fff7ee23890b6108ebaca7 SHA256 c422637814d76cf6f85acc9b3372fede6ea7295b2c31884ac68ee4833cf06f79
-EBUILD xbindkeys-1.8.0.ebuild 901 RMD160 c8554c7965ce3c1e1c7e4873fbad70dd821157e8 SHA1 5dce5f8be49e2a6bfc6c2bbb325f52256121483a SHA256 dda14378e94685ba9696a1a096b69b3e17f756dbeec0f02440401b494b87a1e9
-MD5 c605619fac32394d1455e899bd05dbb2 xbindkeys-1.8.0.ebuild 901
-RMD160 c8554c7965ce3c1e1c7e4873fbad70dd821157e8 xbindkeys-1.8.0.ebuild 901
-SHA256 dda14378e94685ba9696a1a096b69b3e17f756dbeec0f02440401b494b87a1e9 xbindkeys-1.8.0.ebuild 901
-MISC ChangeLog 5793 RMD160 2e885c54ea2b4816120e44be6211380d47d4f46d SHA1 44f5160385012acbee6a607bc15d445f263445ff SHA256 8ec842cdfe29647a04bd1beb2b889ee1f7d2e27f77ad93ed194d36d1baca040e
-MD5 4119596ac98fae26d06d212e34ee776d ChangeLog 5793
-RMD160 2e885c54ea2b4816120e44be6211380d47d4f46d ChangeLog 5793
-SHA256 8ec842cdfe29647a04bd1beb2b889ee1f7d2e27f77ad93ed194d36d1baca040e ChangeLog 5793
+EBUILD xbindkeys-1.8.0.ebuild 1326 RMD160 bc1e8aa6e89a921ff13f5411cc18316be35e7c4d SHA1 f9dd744b99ab0419bfd3e5f5265418b1b5038dff SHA256 e6ec81e8a543c8bf6895dcb4654b4ee809e9c198d19935364f2e5667864e11c5
+MD5 0a2218ea74ae28c1dcc9c78c58b89e65 xbindkeys-1.8.0.ebuild 1326
+RMD160 bc1e8aa6e89a921ff13f5411cc18316be35e7c4d xbindkeys-1.8.0.ebuild 1326
+SHA256 e6ec81e8a543c8bf6895dcb4654b4ee809e9c198d19935364f2e5667864e11c5 xbindkeys-1.8.0.ebuild 1326
+MISC ChangeLog 6136 RMD160 e5dd1870485e3ab6cc97fb24b1e5a2bcdc118cd7 SHA1 ea108f07d09ad62e519edc2cab2591c7d256548f SHA256 47a009f0788e5611619ff1a0e6fcd3ac8f2d000438f08507efd467ea235e05b7
+MD5 d478e8e82138e3502f8348402d50f80f ChangeLog 6136
+RMD160 e5dd1870485e3ab6cc97fb24b1e5a2bcdc118cd7 ChangeLog 6136
+SHA256 47a009f0788e5611619ff1a0e6fcd3ac8f2d000438f08507efd467ea235e05b7 ChangeLog 6136
 MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
 MD5 cdb11033a3fa6525334cecf938961c07 metadata.xml 166
 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 metadata.xml 166
